# Emerging_Insights_search_api_06_Nov

./: .gitignore  README.md  config_loader.py  local.toml  main.py  query.txt  query_generator.py  requirements.txt  sample_route.py  search_docs_v1.py  search_opensearch.py  unique_docs.txt
CommonService/: pyproject.toml
CommonService/CommonService/async_bedrock/: __init__.py  base.py  constants.py
CommonService/CommonService/async_commonsession/: commonsession.py
CommonService/CommonService/async_opensearch/: client.py  config.py  service.py
CommonService/CommonService/tests/: s3_adapter_tests.py  test_bedrock.py
CommonService/CommonService/utils/: helpers.py
config/: local.toml  settings.toml
nuget/: nuget.nuspec
src/api/routes/: bedrock_client.py  query_generator.py  sample_route.py  search_docs_v1.py  search_opensearch.py  settings.py
src/core/: config_loader.py
src/db/: db_middleware.py  search_config_local.yaml
src/logger/: console_logs.py
src/models/: sample_schemas.py  search_schemas.py
src/utils/: utils.py
test/test_router/: test_sample_route.py
