[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CommonService"
version = "0.1.0"
description = ""
dependencies = [
    "aioboto3>=1.26.0",
    "pydantic>=1.10.0",
    "numpy>=1.21.0"
]

readme = ""
requires-python = ">=3.7"


[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
#include = ["CommonService*"]